# aws_oil

./: .gitignore  README.md  aws_parameter_store.py  project.toml  pyproject.toml  requirements.txt  setup.cfg
