[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aws_oil"
version = "0.1.0"
description = "as the name, it helps yo dump key/value from aws paramter store"
authors = [{name = "tim", email = "tim.yellow@gmail.com"}]
readme = "README.md"
license = {text = "MIT License"}

dependencies = [
	"click >7.0.0",
	"ssm_parameter_store >= 19.11.0"
]

[project.scripts]
aws-parameter-store-dump = "aws_parameter_store:main"
