[metadata]
name = aws_oil
version = 0.1.4
long_description = file: README.md
long_description_content_type = text/markdown
author = tim hsu
author_email = tim.yellow@gmail.com
license = MIT

[options]
packages = find:
install_requires =
    click>=7.0.0
    ssm_parameter_store>=19.11.0
python_requires = >=3.8

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    aws-parameter-store-dump = aws_oil.aws_parameter_store:main
